force-app/main/default/objects/Market_Analysis__c/Market_Analysis__c.object-meta.xml
<CustomObject>
    <description>Summary market and region level analyses for store expansion strategy</description>
    <label>Market Analysis</label>
    <nameField>
        <label>Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>