force-app/main/default/objects/Market_Analysis__c/fields/Blind_Spots__c.field-meta.xml
<CustomField>
    <fullName>Blind_Spots__c</fullName>
    <label>Blind Spot Areas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>