force-app/main/default/objects/Market_Analysis__c/fields/Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Growth_Rate__c</fullName>
    <label>Market Growth Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>