force-app/main/default/objects/Market_Analysis__c/fields/TAM__c.field-meta.xml
<CustomField>
    <fullName>TAM__c</fullName>
    <label>Total Addressable Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>