force-app/main/default/objects/Market_Analysis__c/fields/Top_Sites__c.field-meta.xml
<CustomField>
    <fullName>Top_Sites__c</fullName>
    <label>Top Recommended Sites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>